[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/chara/nitori/sm.png" type="Texture" id=1]
[ext_resource path="res://assets/chara/nitori/particle.png" type="Texture" id=2]
[ext_resource path="res://assets/chara/nitori/boom-Sheet.png" type="Texture" id=3]
[ext_resource path="res://enemy/nitori/missile.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 24.0

[sub_resource type="Animation" id=4]
resource_name = "explode"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/shape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="missile" type="Area2D"]
collision_layer = 0
collision_mask = 65
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -5, 0 )
amount = 5
visibility_rect = Rect2( -50, -50, 100, 100 )
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 64

[node name="shape" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 3 )
disabled = true

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
hframes = 3
vframes = 3

[node name="anim" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_missile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_missile_body_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
